fixed scrolling white space

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -1,7 +1,20 @@
 @import "./color.scss";
 
 .App {
+  background-image:url("./assets/background_img.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   text-align: center;
+  overflow: scroll;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  top: 0;
+  left: 0;
 
   h1 {
     font-size: 50px;
